# read-secret

./: Cargo.toml  README.md
examples/: e1.rs  pass_gpg.asc
src/: lib.rs
tests/: pass_0
